[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/maze/Maze.gd" type="Script" id=1]
[ext_resource path="res://prefabs/player/PlayerMaze.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/mob_end/MobEndMaze.tscn" type="PackedScene" id=3]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.643137, 0.705882, 0.945098, 1 )

[node name="Maze" type="Spatial"]
script = ExtResource( 1 )

[node name="Plane" type="MeshInstance" parent="."]
transform = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 25, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ButtonGenerate" type="Button" parent="."]
margin_right = 172.0
margin_bottom = 94.0
text = "Generate"

[node name="ButtonRoll" type="Button" parent="."]
margin_top = 94.0
margin_right = 172.0
margin_bottom = 188.0
text = "Roll"

[node name="PlayerMaze" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="PlayerMaze"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15, 0 )
fov = 45.0
size = 20.0

[node name="MobEndMaze" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="ButtonGenerate" to="." method="_on_ButtonGenerate_pressed"]
[connection signal="pressed" from="ButtonRoll" to="." method="_on_ButtonRoll_pressed"]
